Basic html tutorial
-tag concept
-headers
-color and font styling

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>mustafa aslan</title>
+<title>Mustafa ASLAN</title>
 </head>
-<body>
-<p>mustafa aslan</p>
-<p>220104044</p>
+<body bgcolor = "#E2E4F0">
+    <p><font color = "#1235FA">Mustafa ASLAN</font></p>
+<p><font color = "#1235FA"> 220104044 </font></p>
+<h1><font face= "verdana" color = "#FF2222"><em>Welcome to my page!</em></font></h1>
+I will share <h2>My biography</h2> <h2>My research area</h2>and <h2>My hobies</h2>here.
+<p>I hope you will enjoy surfing on my <strong>website</strong></p>
 </body>
 </html>
