Practise with Allmer

--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Mustafa ASLAN</title>
+<title>CS102</title>
+<style>
+    h1 {background-color: silver;
+color: gold;
+font-family: monospace;
+text-align: center;
+    }
+    h2{
+        font-family: serif;
+        font-size: 2em;
+        color: #999999;
+        background-color: mintcream;
+    }
+    </style>
 </head>
-<body bgcolor = "#E2E4F0">
-    <p><font color = "#1235FA">Mustafa ASLAN</font></p>
-<p><font color = "#1235FA"> 220104044 </font></p>
-<h1><font face= "verdana" color = "#FF2222"><em>Welcome to my page!</em></font></h1>
-I will share <h2>My biography</h2> <h2>My research area</h2>and <h2>My hobies</h2>here.
-<p>I hope you will enjoy surfing on my <strong>website</strong></p>
+
+<body>
+    <h1>MUSTAFA ASLAN</h1>
+    <p>I will share <h2>My biography</h2> <h2>My research area</h2>and <h2>My hobies</h2>here.
+    <p>I hope you will enjoy surfing on my <strong>website</strong></p></p>
 </body>
 </html>
