Homework -create table- last version

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     table, th, td {
         border: 1px solid black;
         border-collapse: collapse;
-    }
-    th, td {
+        margin-top: 10%;
+        margin-left: 20%;
+        margin-right: 20%;
+        margin-bottom: 10%;
         padding: 50px;
         text-align: center;
-    }
+        }
     h1 {background-color: silver;
 color: gold;
 font-family: monospace;
@@ -56,8 +58,8 @@ text-align: center;
         <colgroup span="2" style="width: 40%; text-align: center; vertical-align: top;"></colgroup>
         <thead style="background-color: red;">
         <tr>
+            <th>LECTURE</th>
             <th>CLASS</th>
-            <th>ROOM</th>
             <th>DATE</th>
         </tr>
         </thead>
