--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css" type="text/css"/>
+    <link rel="icon"/>
 <title>CS102</title>
 <style>
     table, th, td {
