--- a/forms.html
+++ b/forms.html
@@ -6,16 +6,66 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Make forms</title>
-        <link rel="icon" type="image/x-icon" href="favicon.ico "
+        <title>CS102 Main Page</title>
+        <style>
+            div {
+                margin-bottom: 5px;
+            }
+            label {
+                display: block;
+                float: left;
+                width: 150px;
+                text-align: right;
+                font-weight: normal;
+                margin-right: 10px;
+            }
+            input.submit {
+                margin-left: 160px;
+            }
+        </style>
+        <link rel="icon" type="image/x-icon" href="favicon.ico" sizes="16x16"/>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <h1>CS102 Home Page</h1>
         <div>
-            <form action="" name="f1" id="f1">
-                <input type="text" name="login" placeholder="login" /><br/>
-                <input type="submit" name="submit" />
+            <form action="/form-processing-script" method="post" enctype="multipart/form-data" name="f1" id="f1">
+                <div>
+                <label for="Name">Name:</label> 
+                <input type="text" name="login" placeholder="name"/><br/>
+                </div>
+                <div>
+                <label for="Surname">Surname:</label>
+                <input type="text" name="login" placeholder="surname"/><br/>
+                </div>
+                <div>
+                <label for="E-mail">E-mail address:</label>
+                <input type="text" name="login" placeholder="yourname@std.iyte.tr" /><br/>
+                </div>
+                <div>
+                <label for="Password">Password:</label>
+                <input type="text" name="login" placeholder="***********"/><br/>
+                </div>
+                <div>
+                <label for="control14">Security Question:</label>
+                <select id="os">
+                    <option value="Please select a question">Please select a question</option>
+                    <option value="What is the name of your best childhood friend?">What is the name of your best childhood friend?</option>
+                    <option value="What is the name of your favorite book?">What is the name of your favorite book?</option>
+                    <option value="What was the name of your elementary school?">What was the name of your elementary school?</option>
+                    <option value="Where did you go the first time you flew on an airplane?">Where did you go the first time you flew on an airplane?</option>
+                    <option value="What was the first film you saw in the cinema?">What was the first film you saw in the cinema?</option>
+                </select>
+                <input type="text" name="favqb" id="control14" /><br/>
+                </div>
+                <div>
+                    <label for="remember">Remember me</label>
+                    <input type="checkbox" name="remember" id="remember"/><br/>
+                </div>
+                <div>
+                    <input type="submit" class="submit" value="Submit"/>
+                </div>
             </form>
         </div>
     </body>
