--- a/Nand.html
+++ b/Nand.html
@@ -1,23 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>For Continued</title>
+        <title>Nand</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="forc.js"></script>
-        <style>
-            .b {
-                position:absolute; 
-                width:100px; 
-                height:100px; 
-                background-color:gray;
-            }
-        </style>
+        <script src="nand.js"></script>
     </head>
     <body>
-        <div id="disp">
+        <div id="res">
         </div>
     </body>
 </html>
