--- a/game 1.html
+++ b/game 1.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head>  
         <title>Game 1</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
             ul {
                 list-style-type: none;
@@ -15,97 +15,114 @@
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
         <script type="text/javascript" src="js.cookie.js"></script>
+        <script type="text/javascript" src="game 1.js"></script>
         <script>
-            var reset = function(){
+            var reset = function () {
                 Cookies.remove("numbers");
+                Cookies.remove("numCorrect");
                 window.location.reload();
             }
         </script>
     </head>
-    <body>
+    <body>  
         <div>
-            <ul id="numName"></ul>
-            <ul id="numNumeric"></ul>
-            <ul id="order"></ul>
-            <button id="reset" onclick="reset();">Reset</button>
+                        <ul id="numName"></ul>
+                        <ul id="numNumeric"></ul>
+                        <ul id="order"></ul>
+                        <button id="reset" onclick="reset();">Reset</button>
+        </div>
+        <div id="timer">
         </div>
         <script type="text/javascript">
-            var numText = ['null', 'eins', 'zwei', 'drei', 'vier', 'fünf', 'sechs', 'sieben', 'acht', 'neun', 'zehn'];
-            //var numText = ['null', 'eins', 'zwei'];
-            var numbers = [];
-            var ulText = $('#numName');
-            var ulNum = $('#numNumeric');
-            var dimx = $('body').width();
-            var dimy = $('body').height();
-            var numbersCookie = Cookies.getJSON('numbers');
-            if (numbersCookie == null) {
-                for (var i = 0; i < numText.length; i++) {
-                    var number = {
-                        word: numText[i],
-                        digit: i,
-                        score: 0,
-                        placed : false
-                    };
-                    numbers.push(number);
-                }
-            } else {
-                numbers = numbersCookie;
-            }
-            var hidden = 0;
-            for (var i = 0; i < numbers.length; i++) {
-                ulText.append('<li id="t' + numbers[i].digit + '">' + numbers[i].word + '</li>');
-                ulNum.append('<li id="n' + numbers[i].digit + '">' + numbers[i].digit + '</li>');
-                if(numbers[i].placed){
-                    $("#n" + i).hide();
-                    hidden++;
-                }
-            }
-            for (var i = 0; i < numText.length; i++) {
-                $("#n" + i).data("index", {index: i});
-                $("#t" + i).data("index", {index: i});
-                $("#n" + i).draggable();
-                $("#t" + i).droppable({drop: function (event, ui) {
-                    var ni = ui.draggable.attr("id");
-                    var ti = this.id;
-                    var niElem = $('#' + ni);
-                    var tiElem = $('#' + ti);
-                    if (niElem.data("index").index === tiElem.data("index").index) {
-                        //correct
-                        niElem.draggable("disable");
-                        niElem.css("display", "none");
-                        numbers[niElem.data("index").index].placed = true;
-                        hidden++;
-                        if (hidden === numText.length) {
-                            $('ul').randomize();
-                            $('#numName').sortable({
-                                start: function (event, ui) {
-                                },
-                                update: function (event, ui) {
-                                    var ordered = 0;
-                                    for (var j = 0; j < numText.length; j++) {
-                                        if ($('#t' + j).index() == j)
-                                            ordered++;
-                                    }
-                                    if (ordered == numText.length)
-                                        alert("done");
-                                }
-                            });
-                        }
-                    } else {
-                        //wrong
-                        var left = Math.floor((Math.random() * (dimx - 20)) + 10);
-                        var top = Math.floor((Math.random() * (dimy - 20)) + 10);
-                        niElem.css("left", left + "px");
-                        niElem.css("top", top + "px");
-                        numbers[niElem.data("index").index].score++;
-                        var score = numbers[niElem.data("index").index].score
-                        if (score > 1)
-                            alert("Come on. Try harder. You were mistaken " + score + " times");
-                    }
-                    Cookies.set('numbers', numbers, {expires: 128});
-                }});
-            }
-            
+            $('document').ready(function () {
+                var numCookie = Cookies.getJSON('numbers');
+                var numCorrect = Cookies.get('numCorrect');
+                var numbers = new Numbers(numCookie, numCorrect);
+                console.log(numbers);
+                numbers.initGame;
+                $('ul').randomize();
+                var secLeft = 60;
+            });
+            var numText = ['Zéro', 'Un', 'Deux', 'Trois', 'Quatre', 'Cinq', 'Six', 'Sept', 'Huit', 'Neuf', 'Dix'];
+//            //var numText = ['Zéro', 'Un', 'Deux'];
+//            var numbers = [];
+//            var ulText = $('#numName');
+//            var ulNum = $('#numNumeric');
+//            var dimx = $('body').width();
+//            var dimy = $('body').height();
+//            var numbersCookie = Cookies.getJSON('numbers');
+//            if (numbersCookie == null) {
+//                for (var i = 0; i < numText.length; i++) {
+//                    var number = {
+//                        word: numText[i],
+//                        digit: i,
+//                        score: 0,
+//                        placed : false
+//                    };
+//                    numbers.push(number);
+//                }
+//            } else {
+//                numbers = numbersCookie;
+//            }
+//            var hidden = 0;
+//            for (var i = 0; i < numbers.length; i++) {
+//                ulText.append('<li id="t' + numbers[i].digit + '">' + numbers[i].word + '</li>');
+//                ulNum.append('<li id="n' + numbers[i].digit + '">' + numbers[i].digit + '</li>');
+//                if(numbers[i].placed){
+//                    $("#n" + i).hide();
+//                    hidden++;
+//                }
+//            }
+//
+//            
+//            for (var i = 0; i < numText.length; i++) {
+//
+//                $("#n" + i).data("index", {index: i});
+//                $("#t" + i).data("index", {index: i});
+//                $("#n" + i).draggable();
+//                $("#t" + i).droppable({drop: function (event, ui) {
+//                    var ni = ui.draggable.attr("id");
+//                    var ti = this.id;
+//                    var niElem = $('#' + ni);
+//                    var tiElem = $('#' + ti);
+//                    if (niElem.data("index").index === tiElem.data("index").index) {
+//                        //correct
+//                        niElem.draggable("disable");
+//                        niElem.css("display", "none");
+//                        numbers[niElem.data("index").index].placed = true;
+//                        hidden++;
+//                        if (hidden === numText.length) {
+//                            $('ul').randomize();
+//                            $('#numName').sortable({
+//                                start: function (event, ui) {
+//                                },
+//                                update: function (event, ui) {
+//                                    var ordered = 0;
+//                                    for (var j = 0; j < numText.length; j++) {
+//                                        if ($('#t' + j).index() == j)
+//                                            ordered++;
+//                                    }
+//                                    if (ordered == numText.length)
+//                                        alert("done");
+//                                }
+//                            });
+//
+//                        }
+//                    } else {
+//                        //wrong
+//                        var left = Math.floor((Math.random() * (dimx - 20)) + 10);
+//                        var top = Math.floor((Math.random() * (dimy - 20)) + 10);
+//                        niElem.css("left", left + "px");
+//                        niElem.css("top", top + "px");
+//                        numbers[niElem.data("index").index].score++;
+//                        var score = numbers[niElem.data("index").index].score
+//                        if (score > 1)
+//                            alert("Come on. Try harder. You were mistaken " + score + " times");
+//                    }
+//                    Cookies.set('numbers', numbers, {expires: 128});
+//                }});
+//            }
+//            
             $.fn.randomize = function (selector) {
                 var $elems = selector ? $(this).find(selector) : $(this).children(),
                         $parents = $elems.parent();
@@ -116,7 +133,6 @@
                 });
                 return this;
             };
-            $('ul').randomize();
         </script>
     </body>
 </html>
